# book-shelf-app

./: .gitignore  docker-compose.yaml
backend/: pyproject.toml
backend/app/: database.py  main.py
backend/app/helpers/: crud_helpers.py
backend/app/models/: author_model.py  book_model.py  category_model.py
backend/app/routers/: category_router.py
backend/app/schemas/: author_schema.py  book_schema.py
backend/tests/: conftest.py  test_author_router.py  test_category_reuter.py  test_main.py  test_mauthor_outer.py
