[tool.poetry]
name = "book-shelf-backend"
version = "0.1.0"
description = ""
authors = ["DudekMarek <dudek371@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pytest = "^8.2.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
